--- a/festilicious.html
+++ b/festilicious.html
@@ -9,11 +9,15 @@
     <h class="main">
         Festilicious
     </h>
+
+    <P class="text">
+        Do you wanna visit every fest in Delhi NCR and taste every kind of fun out there or do you want more people to visit your college fest be it anything we are here to help.
+    </P>
 </body>
 
 <style>
     body {
-        background-image: url('bg.png');
+        background-image: url('pexels-huỳnh-đạt-2251236.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size:100% 100%;
@@ -22,10 +26,19 @@
 
 <style>
     .main {
-        font-size: 100px;
-        margin-left: 525px;
+        color: rgba(228, 228, 228, 0.93);
+        font-size: 150px;
+        margin-top: 225px;
         display: flex;
         justify-content: center;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+
+    .text {
+        font-size: 25px;
+        font-weight: bold;
+        text-align: center;
+        color: whitesmoke;x
     }
 </style>
 
