--- a/festilicious.html
+++ b/festilicious.html
@@ -17,7 +17,7 @@
 
 <style>
     body {
-        background-image: url('pexels-huỳnh-đạt-2251236.jpg');
+        background-image: url('bg.png');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size:100% 100%;
