--- a/festilicious.html
+++ b/festilicious.html
@@ -17,7 +17,7 @@
 
 <style>
     body {
-        background-image: url('bg.png');
+        background-image: url('bg2.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size:100% 100%;
